@@ -7,6 +7,7 @@ Priority: extra
 Build-Depends: debhelper (>= 9),
                chrpath,
                cmake,
+               ghostscript,
                libgdal-dev,
                libnetcdf-dev,
                libpcre3-dev,
@@ -14,6 +15,8 @@ Build-Depends: debhelper (>= 9),
                libxmu-headers,
                python-sphinx,
                sfftw-dev,
+               texlive,
+               texlive-latex-extra,
                zlib1g-dev
 Standards-Version: 3.9.6
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-grass/gmt.git
