@@ -35,6 +35,7 @@ gmt (5.1.2+dfsg1-1) UNRELEASED; urgency=medium
   * Fix bash-completion installation.
   * Strip RPATH from binary & libraries.
   * Also exclude prebuilt documentation and manpages from repacked source.
+  * Build documentation in build-indep target.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sun, 07 Jun 2015 12:06:29 +0200
 
